@@ -1,3 +1,10 @@
+2007-10-18  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-pathbar.[ch]:
+        * src/nautilus-navigation-window.c:
+        * src/nautilus-window-manage-views.c:
+	Use gio in pathbar
+
 2007-10-17  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-vfs-utils.[ch]:
